{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 14,
  "lineage": "26ae4c33-6b3d-947b-e6ea-bda1a23021ae",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Tirdad_instance_packer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0717a793796385c97",
            "arn": "arn:aws:ec2:us-east-1:047676296940:instance/i-07113255c814efcac",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07113255c814efcac",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0675b94eaca7754b1",
            "private_dns": "ip-10-0-1-30.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.30",
            "public_ip": "3.238.145.108",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03c52742f714127ff",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-084a4aecfcf252ba8",
            "tags": {
              "Name": "TinstancenamePacker01"
            },
            "tags_all": {
              "Name": "TinstancenamePacker01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05ad26e6eada4d7c5"
            ]
          },
          "dependencies": [
            "aws_security_group.Tlb01",
            "aws_subnet.Tprivate1",
            "aws_vpc.Tmyvpc01",
            "data.aws_ami.packer_image"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Tmyigw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047676296940:internet-gateway/igw-0a03f7fb310c18c69",
            "id": "igw-0a03f7fb310c18c69",
            "owner_id": "047676296940",
            "tags": {
              "Name": "tnamemyigw"
            },
            "tags_all": {
              "Name": "tnamemyigw"
            },
            "vpc_id": "vpc-09578bdcf2518ee61"
          },
          "dependencies": [
            "aws_vpc.Tmyvpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "T_myalb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:047676296940:loadbalancer/app/myalb01-unique/82695144a9a6190b",
            "arn_suffix": "app/myalb01-unique/82695144a9a6190b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "myalb01-unique-1501913801.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:047676296940:loadbalancer/app/myalb01-unique/82695144a9a6190b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "myalb01-unique",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05ad26e6eada4d7c5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05879b29f5901a2fe"
              },
              {
                "subnet_id": "subnet-084a4aecfcf252ba8"
              }
            ],
            "subnets": [
              "subnet-05879b29f5901a2fe",
              "subnet-084a4aecfcf252ba8"
            ],
            "tags": {
              "Name": "tnamemyalb01"
            },
            "tags_all": {
              "Name": "tnamemyalb01"
            },
            "vpc_id": "vpc-09578bdcf2518ee61",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.Tlb01",
            "aws_subnet.Tprivate1",
            "aws_subnet.Tprivate2",
            "aws_vpc.Tmyvpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "Tmytg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:047676296940:targetgroup/mytg20230421141022566300000001/e1948070eaffc6bc",
            "arn_suffix": "targetgroup/mytg20230421141022566300000001/e1948070eaffc6bc",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:047676296940:targetgroup/mytg20230421141022566300000001/e1948070eaffc6bc",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "mytg20230421141022566300000001",
            "name_prefix": "mytg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09578bdcf2518ee61"
          },
          "dependencies": [
            "aws_vpc.Tmyvpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "Tmytgattachment01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:047676296940:targetgroup/mytg20230421141022566300000001/e1948070eaffc6bc-20230421141101784800000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:047676296940:targetgroup/mytg20230421141022566300000001/e1948070eaffc6bc",
            "target_id": "i-07113255c814efcac"
          },
          "dependencies": [
            "aws_instance.Tirdad_instance_packer",
            "aws_lb_target_group.Tmytg01",
            "aws_security_group.Tlb01",
            "aws_subnet.Tprivate1",
            "aws_vpc.Tmyvpc01",
            "data.aws_ami.packer_image"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Tmyroutetable01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047676296940:route-table/rtb-020595c3e620faa3d",
            "id": "rtb-020595c3e620faa3d",
            "owner_id": "047676296940",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a03f7fb310c18c69",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tnamemyroutetable01"
            },
            "tags_all": {
              "Name": "tnamemyroutetable01"
            },
            "timeouts": null,
            "vpc_id": "vpc-09578bdcf2518ee61"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Tmyigw01",
            "aws_vpc.Tmyvpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Tmyroutetableassociation01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08894e6860dcaab36",
            "route_table_id": "rtb-020595c3e620faa3d",
            "subnet_id": "subnet-084a4aecfcf252ba8"
          },
          "dependencies": [
            "aws_internet_gateway.Tmyigw01",
            "aws_route_table.Tmyroutetable01",
            "aws_subnet.Tprivate1",
            "aws_vpc.Tmyvpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Tlb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047676296940:security-group/sg-05ad26e6eada4d7c5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ad26e6eada4d7c5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TK All teraffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "Tlbssh20230421141022605000000002",
            "name_prefix": "Tlbssh",
            "owner_id": "047676296940",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tnamesg"
            },
            "tags_all": {
              "Name": "tnamesg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09578bdcf2518ee61"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Tmyvpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "Tlbingress01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3450037266",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05ad26e6eada4d7c5",
            "security_group_rule_id": "sgr-06bcc1a461830debd",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Tlb01",
            "aws_vpc.Tmyvpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Tprivate1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047676296940:subnet/subnet-084a4aecfcf252ba8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084a4aecfcf252ba8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "047676296940",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tnameSubnet01"
            },
            "tags_all": {
              "Name": "tnameSubnet01"
            },
            "vpc_id": "vpc-09578bdcf2518ee61"
          },
          "dependencies": [
            "aws_vpc.Tmyvpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Tprivate2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047676296940:subnet/subnet-05879b29f5901a2fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05879b29f5901a2fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "047676296940",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tnameSubnet02"
            },
            "tags_all": {
              "Name": "tnameSubnet02"
            },
            "vpc_id": "vpc-09578bdcf2518ee61"
          },
          "dependencies": [
            "aws_vpc.Tmyvpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Tmyvpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047676296940:vpc/vpc-09578bdcf2518ee61",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-018ea9a6964937e9c",
            "default_route_table_id": "rtb-061bdcf661d72af40",
            "default_security_group_id": "sg-09770e4ed8649cb1d",
            "dhcp_options_id": "dopt-016537b5db768a153",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09578bdcf2518ee61",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-061bdcf661d72af40",
            "owner_id": "047676296940",
            "tags": {
              "Name": "tnameVPC01"
            },
            "tags_all": {
              "Name": "tnameVPC01"
            }
          }
        }
      ]
    }
  ]
}